--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
+@import "bootstrap-italia/dist/css/bootstrap-italia.min.css";
+@import "@ng-select/ng-select/themes/default.theme.css";
+
+body {
+  padding: 8px;
+  overflow-x: hidden;
+}
+
+.form-control {
+  min-height: 1.5rem;
+}
+.ng-select .ng-select-container {
+  min-height: 28px !important;
+  min-width: 150px;
+}
+.ng-select.ng-select-single .ng-select-container {
+  min-height: 28px;
+}
+::ng-deep .ng-select {
+  z-index: 1050; /* Adjust the value as needed */
+}
+
+::ng-deep .ng-dropdown-panel {
+  z-index: 1050; /* Adjust the value as needed */
+}
