feat: - [x] modal added - [x] accordion added - [x] created homepage with general and preference tabs

--- a/src/app/component/card/card.component.html
+++ b/src/app/component/card/card.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-12">
-    <div class="card-wrapper shadow p-0">
-      <div class="card">
-        <div class="card-body">
+  <div class="col-12 p-0">
+    <div class="card-wrapper bg-danger shadow p-0">
+      <div class="card p-0" [ngClass]="backgroundColor">
+        <div class="card-body pb-0">
           <ng-content></ng-content>
         </div>
       </div>
