--- a/src/app/component/checkbox/checkbox.component.html
+++ b/src/app/component/checkbox/checkbox.component.html
@@ -6,7 +6,7 @@
     (blur)="onBlur()"
     (input)="onInputChange($event)"
   />
-  <label *ngIf="label" for="checkbox1" class="text-primary">{{ label }}</label>
+  <label *ngIf="label" for="checkbox1">{{ label }}</label>
 </div>
 
 <input
